# tgbot

./: pyproject.toml  requirements.txt  run.py
src/telegramspambot/: __init__.py  bot_instance.py  config.py  keyboards.py  main.py  storage.py  test_new.py  utils.py
src/telegramspambot/handlers/: __init__.py  account_handlers.py  auto_subscribe_handlers.py  auto_subscribe_state_handlers.py  broadcast_handlers.py  broadcast_state_handlers.py  chat_handlers.py  chat_state_handlers.py  main_handlers.py  parser_handlers.py  parser_state_handlers.py  settings_handlers.py  settings_state_handlers.py  state_router.py
src/telegramspambot/workers/: __init__.py  auto_subscribe.py  broadcast.py  user_parser.py
