[project]
name = "telegramspambot"
version = "0.1.0"
description = ""
authors = [
    {name = "lolo228",email = "hojicimo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telebot (>=0.0.5,<0.0.6)",
    "telethon (>=1.41.2,<2.0.0)",
    "pytelegrambotapi (==4.14.0)",
    "python-dotenv (==1.0.0)",
    "langdetect (==1.0.9)"
]

[tool.poetry]
packages = [{include = "telegramspambot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
